--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -36,6 +36,12 @@
               text-align: center;
             }
 
+            .translation-error {
+                font-style: italic;
+                color: darkred;
+                background-color: transparent;
+              }
+
             .original-text {
               font-style: italic; /* Optional: italicize the original text */
             }
