--- a/lexiflux/templates/language-tool-preferences.html
+++ b/lexiflux/templates/language-tool-preferences.html
@@ -293,7 +293,9 @@ new Vue({
 
 You will be given a text in {text_language} language.
 ONE word or phrase is marked with [WORD_START][WORD_END]
-Give in {user_language} language all synonyms and antonyms of the marked word.`
+Give me synonyms and antonyms of the marked word.
+Add to each translation to {user_language} language.
+`
         };
 
         try {
