https://github.com/andgineer/lexiflux/issues/45 restore reading position

--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -141,7 +141,8 @@
         </style>
     </head>
     <body data-book-code="{{ book.code }}"
-          data-book-page-number="{{ page.number }}">
+          data-book-page-number="{{ page.number }}"
+          data-top-word="{{ top_word }}">>
 
         {% block content %}{% endblock %}
 
