--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -142,7 +142,7 @@
     </head>
     <body data-book-code="{{ book.code }}"
           data-book-page-number="{{ page.number }}"
-          data-top-word="{{ top_word }}">>
+          data-top-word="{{ top_word }}">
 
         {% block content %}{% endblock %}
 
