--- a/lexiflux/templates/language-preferences.html
+++ b/lexiflux/templates/language-preferences.html
@@ -346,7 +346,13 @@ Add to each translation to {user_language} language.
     },
     methods: {
         fetchDictionaries() {
-            fetch('/api/get-dictionaries/')
+            fetch('/api/get-dictionaries/', {
+                    method: 'GET',
+                    headers: {
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    },
+                    credentials: 'include'
+                })
                 .then(response => response.json())
                 .then(data => {
                     this.availableDictionaries = data.dictionaries;
@@ -360,7 +366,8 @@ Add to each translation to {user_language} language.
                     'Content-Type': 'application/json',
                     'X-CSRFToken': '{{ csrf_token }}'
                 },
-                body: JSON.stringify({ language_id: this.currentLanguageId })
+                body: JSON.stringify({ language_id: this.currentLanguageId }),
+                credentials: 'include'
             })
             .then(response => {
                 if (!response.ok) {
@@ -395,7 +402,8 @@ Add to each translation to {user_language} language.
                     'Content-Type': 'application/json',
                     'X-CSRFToken': '{{ csrf_token }}'
                 },
-                body: JSON.stringify({ language_id: this.currentLanguageId })
+                body: JSON.stringify({ language_id: this.currentLanguageId }),
+                credentials: 'include'
             })
             .then(response => response.json())
             .then(data => {
@@ -422,7 +430,8 @@ Add to each translation to {user_language} language.
                 body: JSON.stringify({
                     language_id: this.userLanguageId,
                     profile_language_id: this.currentLanguageId
-                })
+                }),
+                credentials: 'include'
             })
             .then(response => response.json())
             .then(data => {
@@ -474,7 +483,13 @@ Add to each translation to {user_language} language.
             this.titleManuallyEdited = false;
         },
         loadAIModels() {
-            fetch('{% url "get_models" %}')
+            fetch('{% url "get_models" %}', {
+                    method: 'GET',
+                    headers: {
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    },
+                    credentials: 'include'
+                })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
@@ -618,7 +633,8 @@ Add to each translation to {user_language} language.
                     'Content-Type': 'application/json',
                     'X-CSRFToken': '{{ csrf_token }}'
                 },
-                body: JSON.stringify(data)
+                body: JSON.stringify(data),
+                credentials: 'include'
             })
             .then(response => {
                 if (!response.ok) {
@@ -671,7 +687,8 @@ Add to each translation to {user_language} language.
                     action: 'delete',
                     id: this.deleteArticleId,
                     language_id: this.currentLanguageId
-                })
+                }),
+                credentials: 'include'
             })
             .then(response => response.json())
             .then(data => {
